# logit

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/logit/: Cargo.toml
crates/logit/src/: lib.rs  main.rs
crates/logit/src/adapters/: amp.rs  claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
crates/logit/src/cli/: app.rs
crates/logit/src/config/: mod.rs
crates/logit/src/discovery/: classifier.rs  mod.rs
crates/logit/src/ingest/: mod.rs
crates/logit/src/models/: agentlog.rs  mod.rs  query_envelope.rs
crates/logit/src/normalize/: mod.rs
crates/logit/src/snapshot/: mod.rs  profiler.rs  (+1 more)
crates/logit/tests/: adapter_expectation_tables.rs  adapter_mapping_matrix.rs  agentlog_schema.rs  amp_content_parts.rs  amp_file_change_parser.rs  amp_thread_parser.rs  claude_session_parser.rs  cli_progress.rs  cli_surface.rs  codex_edge_cases.rs  codex_event_msg_mapping.rs  codex_history_parser.rs  codex_log_parser.rs  codex_response_item_variants.rs  codex_rollout_parser.rs  content_extraction.rs  discovery_artifacts.rs  exit_code_contract.rs  gemini_chat_parser.rs  gemini_edge_cases.rs  gemini_logs_parser.rs  ingest_pipeline.rs  inspect_command.rs  local_environment_smoke.rs  normalize_artifacts.rs  normalize_dedupe.rs  normalize_orchestrator.rs  normalize_unreadable_paths.rs  opencode_auxiliary_parser.rs  opencode_join_strategy.rs  opencode_part_parser.rs  opencode_session_parser.rs  query_envelope.rs  scaffold_layout.rs  snapshot_artifacts.rs  snapshot_integrity.rs  snapshot_redaction.rs  snapshot_samples.rs  source_classification.rs  source_prioritization.rs  (+10 more)
(+81 files in other folders)
