[workspace]
members = ["crates/logit"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Logit: multi-agent local log intelligence CLI"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
schemars = { version = "1.0.4", features = ["derive"] }
time = { version = "0.3.37", features = ["formatting", "parsing"] }
insta = { version = "1.42.2", features = ["json"] }
regex = "1.11.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
