[package]
name = "logit"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
time.workspace = true
regex.workspace = true
rusqlite.workspace = true

[dev-dependencies]
insta.workspace = true
